fix(abc:st): fix misalignment

--- a/packages/abc/st/style/index.less
+++ b/packages/abc/st/style/index.less
@@ -80,7 +80,7 @@
     }
   }
   // Title
-  &__has-filter.@{ant-prefix}-table-column-has-sorters {
+  &__has-filter {
     @st-th-icon-width: 12px;
     @st-filter-and-sort-gutter: 4px;
     @st-filter-icon-size: @st-th-icon-width + @st-filter-and-sort-gutter;
@@ -92,11 +92,21 @@
     @{st-prefix}__filter {
       position: absolute;
       top: 0;
-      right: -(@st-sort-size + @st-filter-icon-size);
+      right: 0;
       bottom: 0;
       display: flex;
       align-items: center;
       justify-items: center;
+    }
+
+    .@{ant-prefix}-table-filter-trigger {
+      height: 100%;
+    }
+
+    &.@{ant-prefix}-table-column-has-sorters {
+      @{st-prefix}__filter {
+        right: -(@st-sort-size + @st-filter-icon-size);
+      }
     }
   }
 
